--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@ enums:
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section class="invert" style="" data-marpit-advanced-background="pseudo" data-marpit-pagination="74" data-marpit-pagination-total="81"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="75" data-class="invert" data-paginate="true" data-footer="All Hands Active Workshop" class="invert" data-marpit-pagination="75" data-marpit-pagination-total="81" style="--class:invert;--paginate:true;--footer:All Hands Active Workshop;">
 <h1>Kaitai Struct: Parsing the Filesystem</h1>
 <ul>
-<li>Using Kaitai, we can not generate a python library to parse our structure
+<li>Using Kaitai, we can now generate a python library to parse our structure
 <ul>
 <li>This allows us to parse them with the following code quickly:</li>
 </ul>
